<resources>
    <string name="app_name">饭饭</string>
    <string name="title_1">附近</string>
    <string name="title_2">约会</string>
    <string name="title_3">消息</string>

    <string name="more">更多</string>
    <string name="send">发送</string>
    <string name="enter_message">输入信息...</string>
    <string name="userName">用户名</string>
    <string name="useravatar">UserAvatar</string>
    <string name="user_real">user_real</string>
    <string name="user_vip">user_vip</string>
    <string name="dateplace">DatePlace</string>
    <string name="descriptionplace">DescriptionPlace</string>
    <string name="ismicwait">isMicWait</string>
    <string name="ismicbusy">isMicBusy</string>
    <string name="message">Message</string>
    <string name="main_text_1">附近的人</string>
    <string name="main_text_2">最近注册</string>
    <string name="main_text_3">认证用户</string>
    <string name="location_circel">location_circel</string>
    <string name="lookingForLocation">正在定位</string>
    <string name="locationError">定位错误，请点击重试</string>
    <string name="myavatar">myAvatar</string>

    <string name="loginText">登录</string>
    <string name="forgetText">忘记密码</string>
    <string name="nextText">下一步</string>
    <string name="backText">上一步</string>
    <string name="resend">重新发送</string>
    <string name="pay_dialog_title">选择一种支付方式</string>
    <string name="pay_dialog_button">前往支付</string>
    <string name="cancel">取消</string>
</resources>
