<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="80dp"
        android:layout_height="80dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/avatar_background"
            android:contentDescription="@string/useravatar"
            android:src="@color/b92"
            app:riv_corner_radius="8dp" />

        <ImageView
            android:id="@+id/isReal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/user_real"
            android:visibility="invisible"
            app:srcCompat="@drawable/identity_real" />

        <ImageView
            android:id="@+id/isVip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/user_vip"
            android:visibility="invisible"
            app:srcCompat="@drawable/identity_vip" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center|start"
                android:maxEms="11"
                android:singleLine="true"
                android:text="@string/userName"
                android:textColor="@color/b30"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                style="@style/StatusText2Offline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:text="@string/dateplace"
                android:textSize="13sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descriptionplace"
                android:textColor="@color/b55" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/isMicWait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:contentDescription="@string/ismicwait"
                    android:visibility="visible"
                    app:srcCompat="@drawable/icon_mic_wait" />

                <ImageView
                    android:id="@+id/isMicBusy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:contentDescription="@string/ismicbusy"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/icon_mic_busy" />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
