<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="0dp"
            android:layout_alignParentTop="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            >

        <TextView
                android:text="@string/locationPlace"
                android:drawableStart="@drawable/icon_font_location_circle"
                android:drawableEnd="@drawable/icon_font_angle_right"
                android:textSize="16sp"
                android:textColor="@color/b30"
                android:letterSpacing="-0.02"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:id="@+id/my_location"
                android:layout_gravity="center|start"
                android:gravity="center"

                />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorPrimary"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="44dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp">

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_text_1"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_text_2"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_text_3"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:id="@+id/recyclerView"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/tabLayout"
            />


</RelativeLayout>